processed/gerrit/txt/55413.txt
Change:     55413
Subject:    LU-17945 lnet: fix nla_extract_val() -Werror=missing-prototypes
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/55413
Change-Id:  Ieb11d25ea8fcd19b715e2decf958cfd9d920bcc8
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2024-06-12 21:49:16.000000000
Updated:    2024-06-25 03:32:50.000000000
Patch Set:  2
Insertions: +1
Deletions:  -1
Comments:   1 (0 unresolved)
Topic:      ubuntu2404

--- Labels ---
  Code-Review: James Simmons: +1; Serguei Smirnov: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, James Simmons, Jian Yu, Serguei Smirnov

--- Commit Message ---
LU-17945 lnet: fix nla_extract_val() -Werror=missing-prototypes

This patch explicitly defines nla_extract_val() as a static function
to fix the following build failure:

lnet/lnet/api-ni.c:2888:1: error:
no previous prototype for 'nla_extract_val' [-Werror=missing-prototypes]
 2888 | nla_extract_val(struct nlattr **attr, int *rem,
      | ^~~~~~~~~~~~~~~

Test-Parameters: trivial testlist=sanity-lnet

Change-Id: Ieb11d25ea8fcd19b715e2decf958cfd9d920bcc8
Fixes: 629d80d ("LU-10003 lnet: migrate fail nid to Netlink")
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55413
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Serguei Smirnov <ssmirnov@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2024-06-12 21:49:16.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2024-06-12 21:51:47.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2024-06-12 22:24:27.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/105433/ : SUCCESS

--- Message (James Simmons, 2024-06-12 22:32:35.000000000) ---
Patch Set 1: Code-Review+1

Ouch, newer gcc :-/

--- Message (Serguei Smirnov, 2024-06-12 22:41:16.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Autotest, 2024-06-13 06:16:15.000000000) ---
Patch Set 1:

Trevis Autotest retesting enforced review-ldiskfs-dne session on el9.3-x86_64/ldiskfs servers and clients for build 105433 patch 1. Requested by jianyu because of LU-16877.

--- Message (Jian Yu, 2024-06-13 18:21:12.000000000) ---
Topic set to ubuntu2404

--- Message (Oleg Drokin, 2024-06-25 03:32:47.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Oleg Drokin, 2024-06-25 03:32:50.000000000) ---
Change has been successfully cherry-picked as 3e8d005bc94d82dfc8010df5350fbf4938a4e547 by Oleg Drokin
